--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "dependencies": {
-    "@babel/cli": "^7.10.5",
-    "@babel/core": "^7.10.5",
-    "@babel/preset-env": "^7.10.4"
+  "devDependencies": {
+    "@babel/cli": "^7.10.4",
+    "@babel/core": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
-    "dev": "babel ./src/index.js -o ./public/bundle.js -w"
+    "dev": "webpack-dev-server --mode development"
   },
-  "repository": "https://github.com/jbelagamba/scrapbook_v2.git",
-  "author": "Jaqueline Belagamba <jaqueline@elofy.com.br>"
+  "dependencies": {
+    "babel-loader": "^8.1.0"
+  }
 }
