--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@babel/cli": "^7.10.4",
     "@babel/core": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/preset-env": "^7.10.4",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
@@ -15,6 +16,7 @@
     "dev": "webpack-dev-server --mode development"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "babel-loader": "^8.1.0"
   }
 }
